--- a/Covid.Client/Pages/EmployeeOverView.razor
+++ b/Covid.Client/Pages/EmployeeOverView.razor
@@ -1,21 +1,21 @@
-﻿@page "/employeeoverview"
-@inherits EmployeeOverViewBase
-<h3>EmployeeOverView</h3>
+﻿@page "/employees"
+@inherits EmployeeOverviewBase
+<h3>EmployeeOverview</h3>
 
-
-<table class="table table-hover table-striped">
-    <thead class="thead-dark">
+<table class="table table-bordered">
+    <thead>
         <tr>
-            <th>ID</th>
+            <th>编号</th>
             <th>部门</th>
             <th>姓名</th>
             <th>出生日期</th>
             <th>性别</th>
             <th>操作</th>
         </tr>
+
     </thead>
     <tbody>
-        @foreach (var em in Employees)
+        @foreach(var em in Employees)
         {
             <tr>
                 <td>@em.Id</td>
@@ -24,18 +24,10 @@
                 <td>@em.BirthDate</td>
                 <td>@em.Gender</td>
                 <td>
-                    <a href="@($"employeedetail/{em.Id}")" class="btn btn-primary btn-sm">
-                        Detail
-                    </a>
-                    |
-                    <a href="@($"employeeedit/{em.DepartmentId}/{em.Id}")" class="btn btn-primary btn-sm">
-                        Edit
-                    </a>
+                    <a href="/employeedetail/@em.Id">详细</a>
                 </td>
             </tr>
+
         }
     </tbody>
 </table>
-@* *@
-@* <button class="btn btn-primary" @onclick="@SayHello">Say Hello</button> *@
-@* <h2>@Result</h2> *@
