完成employees网络部分，并将weatherdata本地化

--- a/Covid.Client/Pages/EmployeeOverView.razor
+++ b/Covid.Client/Pages/EmployeeOverView.razor
@@ -1,33 +1,43 @@
 ﻿@page "/employees"
-@inherits EmployeeOverviewBase
+@using Covid.Shared.Dtos
 <h3>EmployeeOverview</h3>
-
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>编号</th>
-            <th>部门</th>
-            <th>姓名</th>
-            <th>出生日期</th>
-            <th>性别</th>
-            <th>操作</th>
-        </tr>
-
+<table class="table table-striped">
+    <thead class="thead-dark">
+    <tr >
+        <th>编号</th>
+        <th>部门</th>
+        <th>姓名</th>
+        <th>性别</th>
+        <th>出生日期</th>
+        <th>操作</th>
+    </tr>
     </thead>
-    <tbody>
-        @foreach(var em in Employees)
-        {
-            <tr>
-                <td>@em.Id</td>
-                <td>@em.DepartmentId</td>
-                <td>@em.Name</td>
-                <td>@em.BirthDate</td>
-                <td>@em.Gender</td>
-                <td>
-                    <a href="/employeedetail/@em.Id">详细</a>
-                </td>
-            </tr>
-
-        }
-    </tbody>
+    @foreach (var item in Employees)
+    {
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.DepartmentId</td>
+            <td>@item.Name</td>
+            <td>@item.Gender</td>
+            <td>@item.BirthDate</td>
+            <td>
+                <a href="EmployeeDetail" >细节</a>
+            </td>
+        </tr>
+    }
 </table>
+
+
+@code {
+    [Inject] private HttpClient client { get; set; }
+    public IEnumerable<EmployeeDto> Employees { get; set; }=new List<EmployeeDto>();
+
+    
+    protected override async Task OnInitializedAsync()
+    {
+        Employees = await client.GetFromJsonAsync<IList<EmployeeDto>>("api/department/1/employee");
+
+        await base.OnInitializedAsync();
+    }
+
+}
