--- a/Covid.Client/Pages/FetchData.razor
+++ b/Covid.Client/Pages/FetchData.razor
@@ -7,29 +7,31 @@
 
 @if (forecasts == null)
 {
-    <p><em>Loading...</em></p>
+    <p>
+        <em>Loading...</em>
+    </p>
 }
 else
 {
-    <table class="table">
+    <table class=table>
         <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
+        <tr>
+            <th>Date</th>
+            <th>Temp. (C)</th>
+            <th>Temp. (F)</th>
+            <th>Summary</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
+        @foreach (var forecast in forecasts)
+        {
+            <tr>
+                <td>@forecast.Date.ToShortDateString()</td>
+                <td>@forecast.TemperatureC</td>
+                <td>@forecast.TemperatureF</td>
+                <td>@forecast.Summary</td>
+            </tr>
+        }
         </tbody>
     </table>
 }
@@ -39,7 +41,34 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = new WeatherForecast[]
+        {
+            new WeatherForecast
+            {
+                Date = new DateTime(2018 - 05 - 06),
+                TemperatureC = 1,
+                Summary = "Freezing"
+            },
+            new WeatherForecast
+            {
+                Date = new DateTime(2018 - 05 - 07),
+                TemperatureC = 14,
+                Summary = "Bracing"
+            },
+            new WeatherForecast
+            {
+                Date = new DateTime(2018 - 05 - 08),
+                TemperatureC = -13,
+                Summary = "Freezing"
+            },
+            new WeatherForecast
+            {
+                Date = new DateTime(2018 - 05 - 09),
+                TemperatureC = -16,
+                Summary = "Balmy"
+            }
+        };
+        await base.OnInitializedAsync();
     }
 
     public class WeatherForecast
@@ -50,6 +79,7 @@ else
 
         public string Summary { get; set; }
 
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        public int TemperatureF => 32 + (int) (TemperatureC / 0.5556);
     }
+
 }
