--- a/Covid.Client/Shared/NavMenu.razor
+++ b/Covid.Client/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="employees">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Employees
+                <span class="oi oi-list-rich" aria-hidden="true"></span> employees
             </NavLink>
         </li>
     </ul>
