--- a/Covid.Client/Pages/EmployeeDetail.razor
+++ b/Covid.Client/Pages/EmployeeDetail.razor
@@ -1,20 +1,22 @@
 ﻿@page "/employeedetail/{EmployeeId}"
 @using Covid.Shared.Dtos
+@using Covid.Client.Services
 
 <h3>EmployeeDetail @Employee.Name</h3>
 <ul class="list-group">
-    <li class="list-group-item">@Employee.Id</li>
-    <li class="list-group-item">@Employee.DepartmentId</li>
-    <li class="list-group-item">@Employee.Name</li>
-    <li class="list-group-item">@Employee.BirthDate</li>
-    <li class="list-group-item">@Employee.Gender</li> 
+    <li class="list-group-item">员工号：@Employee.Id</li>
+    <li class="list-group-item">部门号：@Employee.DepartmentId</li>
+    <li class="list-group-item">姓名：@Employee.Name</li>
+    <li class="list-group-item">出生年月：@Employee.BirthDate.Date.ToShortDateString()</li>
+    <li class="list-group-item">性别：@Employee.Gender</li> 
 </ul>
-<a href="employees" class="btn btn-light">返回</a>
+<a href="employees" class="btn btn-primary">返回</a>
 @code {
     [Inject] public HttpClient Client { get; set; }
 
     [Parameter]
     public string EmployeeId { get; set; }
+    // public EmployeeService EmployeeService { get; set; }
     public EmployeeDto Employee { get; set; }=new EmployeeDto();
     public IEnumerable<EmployeeDto> Employees { get; set; }=new List<EmployeeDto>();
 
@@ -22,6 +24,7 @@
         {
             Employees = await Client.GetFromJsonAsync<IList<EmployeeDto>>("api/department/1/employee");
             Employee = Employees.FirstOrDefault(x => x.Id == int.Parse(EmployeeId));
+            // Employee = await EmployeeService.GetOneById(int.Parse(EmployeeId));
             await base.OnInitializedAsync();
         }
 
