--- a/Covid.Client/Pages/EmployeeDetail.razor
+++ b/Covid.Client/Pages/EmployeeDetail.razor
@@ -14,40 +14,44 @@
 <form>
     <div class="form-group row">
         <label class="col-form-label">姓名</label>
-        <input class="form-control" @bind="@Employee.Name" />
+        <input class="form-control" @bind="@Employee.Name"/>
     </div>
     <div class="form-group row">
         <label class="col-form-label">出生日期</label>
-        <input class="form-control" @bind="@Employee.BirthDate" type="date" />
+        <input class="form-control" @bind="@Employee.BirthDate" type="date"/>
     </div>
 </form>
 <h3>即时更新的绑定</h3>
 <form>
     <div class="form-group row">
         <label class="col-form-label">姓名</label>
-        <input class="form-control" @bind="@Employee.Name" @bind:event="oninput" />
+        <input class="form-control" @bind="@Employee.Name" @bind:event="oninput"/>
     </div>
     <div class="form-group row">
         <label class="col-form-label">出生日期</label>
-        <input class="form-control" @bind="@Employee.BirthDate" type="date" @bind:event="oninput" />
+        <input class="form-control" @bind="@Employee.BirthDate" type="date" @bind:event="oninput"/>
     </div>
     <button onclick="ClickButton">点击</button>
 </form>
 <a href="employees" class="btn btn-primary">返回</a>
+
 @code {
-    [Inject] public HttpClient Client { get; set; }
+
+    [Inject]
+    public HttpClient Client { get; set; }
 
     [Parameter]
     public string EmployeeId { get; set; }
-    // public EmployeeService EmployeeService { get; set; }
+
     public EmployeeDto Employee { get; set; } = new EmployeeDto();
     public IEnumerable<EmployeeDto> Employees { get; set; } = new List<EmployeeDto>();
 
     protected override async Task OnInitializedAsync()
     {
-        Employees = await Client.GetFromJsonAsync<IList<EmployeeDto>>("api/department/1/employee");
-        Employee = Employees.FirstOrDefault(x => x.Id == int.Parse(EmployeeId));
-        // Employee = await EmployeeService.GetOneById(int.Parse(EmployeeId));
+        // Employees = await Client.GetFromJsonAsync<IList<EmployeeDto>>("api/department/1/employee");
+        // Employee = Employees.FirstOrDefault(x => x.Id == int.Parse(EmployeeId));
+      Employee=  await Client.GetFromJsonAsync<EmployeeDto>("api/department/1/employee/1");
+
         await base.OnInitializedAsync();
     }
 
@@ -57,4 +61,3 @@
     }
 
 }
-
