--- a/Covid.Client/Pages/EmployeeOverView.razor
+++ b/Covid.Client/Pages/EmployeeOverView.razor
@@ -1,4 +1,4 @@
-﻿@page "/employees"
+﻿@page "/employees/{DepartmentId}"
 @using Covid.Shared.Dtos
 @using Covid.Client.Services
 @using System.Net
@@ -7,52 +7,57 @@
 <h3>EmployeeOverview</h3>
 <table class="table table-striped">
     <thead class="thead-dark">
-        <tr>
-            <th>编号</th>
-            <th>部门</th>
-            <th>姓名</th>
-            <th>性别</th>
-            <th>出生日期</th>
-            <th>操作</th>
-        </tr>
+    <tr>
+        <th>编号</th>
+        <th>部门</th>
+        <th>姓名</th>
+        <th>性别</th>
+        <th>出生日期</th>
+        <th>操作</th>
+    </tr>
     </thead>
-    @if (Employees.ToList().Count<=1)
+    @foreach (var item in Employees)
     {
-        Console.WriteLine("employee is null");
-        }
-    else
-    {
-        @foreach (var item in Employees)
-        {
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.DepartmentId</td>
-                <td>@item.Name</td>
-                <td>@item.Gender</td>
-                <td>@item.BirthDate.ToShortDateString()</td>
-                <td class="row">
-                    <a href="employeeedit/@item.Id">编辑</a> <a href="employeedetail/@item.Id">细节</a>
-                </td>
-            </tr>
-        }
+        <tr>
+            <td>@item.Id</td>
+            <td>@item.DepartmentId</td>
+            <td>@item.Name</td>
+            <td>@item.Gender</td>
+            <td>@item.BirthDate.ToShortDateString()</td>
+            <td>
+                <dl class="row justify-content-start">
+                    <dd>
+                        @* <a class="btn btn-primary" href="employeeedit/@DepartmentId/@item.Id">编辑</a> *@
+                        <a class="btn btn-primary" href="employeeedit/@DepartmentId/">编辑</a>
+                    </dd>
+                    <dd>
+                        <a class="btn btn-light" href="employeedetail/@item.Id">细节</a>
+                    </dd>
+                </dl>
 
 
+            </td>
+
+
+        </tr>
     }
 </table>
 
 
 @code {
 
-    [Inject] private HttpClient client { get; set; } 
-    // public EmployeeDto employee { get; set; }
-    public IEnumerable<EmployeeDto> Employees { get; set; }=new List<EmployeeDto>();
-    // public EmployeeService EmployeeService { get; set; }
-    
+    [Inject]
+    private HttpClient client { get; set; }
+
+    [Parameter]
+    public string DepartmentId { get; set; }
+
+    public IEnumerable<EmployeeDto> Employees { get; set; } = new List<EmployeeDto>();
+
     protected override async Task OnInitializedAsync()
     {
-        Employees = await client.GetFromJsonAsync<IList<EmployeeDto>>("api/department/1/employee");
-        // Employees =await EmployeeService.GetAllFromDepartment(1);
-        
+        Employees = await client.GetFromJsonAsync<IList<EmployeeDto>>($"api/department/{DepartmentId}/employee");
+
 
         await base.OnInitializedAsync();
     }
