--- a/Covid.Client/Shared/NavMenu.razor
+++ b/Covid.Client/Shared/NavMenu.razor
@@ -23,7 +23,7 @@
             </NavLink>
         </li>*@
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="employees">
+            <NavLink class="nav-link" href="employees/1">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> employees
             </NavLink>
         </li>
